packages/svelte/tests/compiler-errors/samples/invalid-rune-name-shadowed/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'rune_invalid_name',
		message: '`$state.foo` is not a valid rune'
	}
});
